# parser

./: .gitignore  .gitreview  INFO  INFO.yaml  requirements.txt  setup.cfg  setup.py  tox.ini
apigateway/: .gitignore  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
apigateway/.testrepository/: times.dbm
apigateway/apigateway/api/: app.py  config.py  expose.py  hooks.py
apigateway/apigateway/api/controllers/: root.py
apigateway/apigateway/api/controllers/v1/: controller.py  users.py
apigateway/apigateway/cmd/: api.py
apigateway/apigateway/db/: api.py  models.py
apigateway/apigateway/db/sqlalchemy/: alembic.ini
apigateway/apigateway/db/sqlalchemy/alembic/: env.py
apigateway/apigateway/db/sqlalchemy/alembic/versions/: 6acdba136829_create_user_table.py
apigateway/apigateway/grpc/tosca2heat/: model.py
apigateway/apigateway/grpc/verigraph/: model.py
apigateway/tools/: build.sh  install_proto3.sh  tox_install_python.sh
docs/: conf.yaml  documentation-example.rst  index.rst  intro.md  intro.rst
docs/configguide/: featureconfig.rst  index.rst  installerconfig.rst  postinstall.rst
docs/developer/design/: apigateway.rst  index.rst  policy2tosca.rst  tosca2heat.rst  verigraph.rst  yang2tosca.rst
docs/developer/overview/: index.rst  overview.rst
docs/developer/requirements/: index.rst  parser requirement arno release.rst  parser_requirement_arno_release.rst
docs/governance/: index.rst
docs/governance/committer/: colorado release committer email motion vote record
docs/how-to-use-docs/: documentation-example.rst
docs/installationprocedure/: feature.configuration.rst  featureconfig.rst  index.rst  installerconfig.rst  policy2tosca.rst  yang2tosca.rst
docs/intro/: index.rst  intro.rst
docs/parser_docs/: index.rst  vRNC_tosca_intro.rst
docs/parser_docs/intro/: intro.rst
docs/parser_docs/policy2tosca/: policy2tosca.rst
docs/parser_docs/tosca2heat/: parser_new_keywords.rst  vRNC_tosca_intro.rst
docs/parser_docs/yang2tosca/: clearwater_tosca.yaml  yang2tosca.rst
docs/release/configguide/: featureconfig.rst  index.rst  postinstall.rst
docs/release/installation/: index.rst  installation.instruction.rst
docs/release/release-notes/: diff_file_list.rst  index.rst  release-notes.rst
docs/release/userguide/: feature.userguide.rst  index.rst
docs/testing/: index.rst  testusage.rst
docs/tosca2heat/: TOSCA_nfv_definition_1_0.yaml  index.rst  parser_new_keywords.rst  vRNC_tosca_intro.rst
docs/tosca2heat/simple_rnc_definition/: Simple_RNC.yaml  (+6 more)
docs/userguide/: featureusage.rst  index.rst  policy2tosca.rst  testusage.rst  yang2tosca.rst
docs/yang2tosca/: README.rst  clearwater_tosca.yaml  index.rst
governance/Committer/: parser project committer promotion guidline.rst
policy2tosca/: README.rst  setup.py
policy2tosca/policy2tosca/: add_definition.py  add_type.py  del_definition.py  del_type.py  example.yaml  main.py
policy2tosca/policy2tosca.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: functest_run.sh  parser_install.sh
tools/: parser_install.sh
tosca2heat/: README.md  diff_file_list.rst
tosca2heat/heat-translator/: .gitignore  MANIFEST.in  requirements.txt  setup.cfg  setup.py  tox.ini
tosca2heat/heat-translator-0.3.0/: AUTHORS  ChangeLog  setup.cfg
tosca2heat/tosca-parser/: .gitignore  requirements.txt  setup.cfg  setup.py  tox.ini
tosca2heat/tosca-parser-0.3.0/: AUTHORS  ChangeLog  PKG-INFO  setup.cfg
verigraph/: .classpath  .project  LICENSE  README.md  README.rst  buildVeriGraph_gRPC.xml  pom.xml
verigraph/tester/: README.md  test.py
yang2tosca/: README.md  parser.py  tosca.yaml  tosca_transformer.xslt  tosca_translator.py
(+282 files in other folders)
