[metadata]
name = parser
summary = OPNFV Parser Project
author = OPNFV
author-email = openstack-dev@lists.openstack.org
home-page = https://wiki.opnfv.org/display/parser
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

