[metadata]
name = nfv-parser
version = 0.5
url = https://wiki.opnfv.org/display/parser
summary = OPNFV Parser Project
author = OPNFV
author-email = opnfv-tech-discuss@lists.opnfv.org
home-page = https://wiki.opnfv.org/display/parser
classifier =
    Environment :: OPNFV
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    toscaparser
    heat-translator
    policy2tosca
    verigraph
    apigateway

[entry_points]
console_scripts =
    nfv-parser = apigateway.cmd.api:main

[compile_catalog]
directory = nfv-parser/locale
domain = nfv-parser

[update_catalog]
domain = nfv-parser
output_dir = nfv-parser/locale
input_file = nfv-parser/locale/nfv-parser.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = nfv-parser/locale/nfv-parser.pot

