[metadata]
name = apigateway
version =
url = https://opnfv.org/parser
summary = API Application
description-file = README.md
author = parser
author-email = openstack-dev@lists.openstack.org
classifier =
    Environment :: OPNFV
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[global]
setup-hooks = 
    pbr.hooks.setup_hook

[files]
packages =
    apigateway

[entry_points]
console_scripts =
    apigateway = apigateway.cmd.api:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = apigateway/locale
domain = apigateway

[update_catalog]
domain = apigateway
output_dir = apigateway/locale
input_file = apigateway/locale/apigateway.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = apigateway/locale/apigateway.pot
